// Messages should be fully-compatible with Promtheus 2.x.

syntax = "proto3";
package prompb;

import "gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// TODO - with benchmarks!
// - [(gogoproto.nullable) = false] for TimeSeries.labels and TimeSeries.samples

message Label {
  string name  = 1;
  string value = 2;
}

message Sample {
  double value       = 1;
  int64 timestamp_ms = 2;
}

message TimeSeries {
  repeated Label labels   = 1; // not ordered
  repeated Sample samples = 2; // not ordered
}

message LabelMatcher {
  enum Type {
    EQ  = 0;
    NEQ = 1;
    RE  = 2;
    NRE = 3;
  }

  Type type    = 1;
  string name  = 2;
  string value = 3;
}

message ReadHints {
  int64 step_ms  = 1; // Query step size in milliseconds.
  string func    = 2; // String representation of surrounding function or aggregation.
  int64 start_ms = 3; // Start time in milliseconds.
  int64 end_ms   = 4; // End time in milliseconds.
}

message Query {
  int64 start_timestamp_ms       = 1;
  int64 end_timestamp_ms         = 2;
  repeated LabelMatcher matchers = 3;
  ReadHints hints                = 4;
}

message QueryResult {
  // Samples within a time series must be ordered by time.
  repeated TimeSeries time_series = 1;
}

message ReadRequest {
  repeated Query queries = 1;
}

message ReadResponse {
  // In same order as the request's queries.
  repeated QueryResult results = 1;
}

message WriteRequest {
  repeated TimeSeries time_series = 1;
}
